# calc-only-page

./: pyproject.toml
app/: attendance_calc.py  attendance_calc_lib.py  attendance_contract_query.py  attendance_query_class.py  auth_jwt.py  calc_work_classes2.py  calc_work_classes3.py  database_async.py  database_base.py  dataframe_collect_lib.py  main.py  models.py  models_aprv.py  models_tt.py  result_collect_lib.py  select_only_sync.py  series_count_frame.py  series_to_frame.py  users_query.py  users_query_lib.py
app/templates/: output_1-202504111415.html  output_2-202504111404.html  output_4-202504111330.html  select_form.html
app/tests/: conftest.py  test_attendance_count.py  test_table_query.py
mysql/: Dockerfile
mysql/restore/: dump.sql  local_cat_db.sql
